--- a/index.html
+++ b/index.html
@@ -14,25 +14,27 @@
         </a>
 
         <ul>
-          <li><a href="#traditions-sections">Наші традиції</a></li>
-          <li><a href="#chiefs-sections">Шеф-кухарі</a></li>
-          <li><a href="#formats-sections">Формати</a></li>
-          <li><a href="#contacts-sections">Контакти</a></li>
+          <li>
+            <a class="link" href="#traditions-sections">Наші традиції</a>
+          </li>
+          <li><a class="link" href="#chiefs-sections">Шеф-кухарі</a></li>
+          <li><a class="link" href="#formats-sections">Формати</a></li>
+          <li><a class="link" href="#contacts-sections">Контакти</a></li>
         </ul>
       </nav>
-      <button type="button">Замовити дзвінок</button>
+      <button class="button" type="button">Замовити дзвінок</button>
     </header>
     <main>
       <section>
-        <h1>Сучасна пекарня</h1>
+        <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
       </section>
       <section id="traditions-sections">
-        <ul>
+        <ul class="advantages-list">
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
           <li>Досвідчена управлінська команда</li>
         </ul>
-        <h2>Новий формат традицій</h2>
+        <h2 class="section-title">Новий формат традицій</h2>
         <p>
           <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
           зберегла смак традиційної випічки та натуральність інгредієнтів.
@@ -48,7 +50,9 @@
         />
       </section>
       <section id="chiefs-sections">
-        <h2>Наші найкращі шеф -кухарі</h2>
+        <h2 class="section-title">
+          Наші найкращі <span class="accent">шеф-кухарі</span>
+        </h2>
         <ul>
           <li>
             <article>
@@ -72,7 +76,7 @@
         </ul>
       </section>
       <section id="formats-sections">
-        <h2>Формати</h2>
+        <h2 class="section-title">Формати</h2>
         <ul>
           <li>
             <article>
@@ -92,7 +96,7 @@
         </ul>
       </section>
       <section id="contacts-sections">
-        <h2>Приєднуйся до мережі пекарень</h2>
+        <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640546568074!2d30.488658575694917!3d50.45666967159342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1699014650625!5m2!1suk!2sua"
           width="603"
