--- a/index.html
+++ b/index.html
@@ -81,12 +81,17 @@
       </section>
       <section class="section" id="chefs-sections">
         <div class="container">
-          <h2 class="chefs-title section-title">
+          <h2 class="chefs-title section-title centered">
             Наші найкращі <span class="accent">шеф-кухарі</span>
           </h2>
           <ul>
             <li>
               <article>
+                <img
+                  class="chef-photo"
+                  src="./images/nastya.jpg"
+                  alt="Nastya"
+                />
                 <h3 class="chef-title">Настя</h3>
                 <p>Привіт, я Настя!</p>
                 <p>Вже 10 років, я втілюю у життя цікаві та смачні ідеї.</p>
@@ -95,6 +100,7 @@
             </li>
             <li>
               <article>
+                <img class="chef-photo" src="./images/vlad.jpg" alt="Vlad" />
                 <h3 class="chef-title">Влад</h3>
                 <p>Привіт, я Влад!</p>
                 <p>
@@ -109,7 +115,12 @@
       </section>
       <section class="section" id="formats-sections">
         <div class="container">
-          <h2 class="formats-title section-title">Формати</h2>
+          <h2 class="formats-title section-title centered">Формати</h2>
+          <button class="carousel-button" type="button">
+            <svg widht="44" height="44">
+              <use href="./images/icons.svg#icon-arrow"></use>
+            </svg>
+          </button>
           <ul class="formats-list">
             <li class="formats-item">
               <article class="format-card">
@@ -148,6 +159,11 @@
               </article>
             </li>
           </ul>
+          <button class="carousel-button" type="button">
+            <svg widht="44" height="44">
+              <use href="./images/icons.svg#icon-arrow"></use>
+            </svg>
+          </button>
         </div>
       </section>
       <section class="section" id="contacts-sections">
@@ -167,7 +183,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="container">
         <nav>
           <a href="#">
@@ -204,12 +220,16 @@
             </li>
             <li>
               <a href="#">
-                <!-- logo facebook -->
+                <svg class="address-icon" widht="32" height="32">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
               </a>
             </li>
             <li>
               <a href="#">
-                <!-- logo instagram -->
+                <svg class="address-icon" widht="32" height="32">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
               </a>
             </li>
           </ul>
