--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
             <ul class="formats-list">
               <li class="formats-item">
                 <article class="format-card">
+                  <img
+                    class="format-image"
+                    src="./images/walrus.jpg"
+                    alt="Walrus"
+                  />
                   <h3 class="format-title" lang="en">Walrus</h3>
                   <div class="formats-text">
                     <p>Площа: до 120 м2</p>
@@ -157,6 +162,11 @@
               </li>
               <li class="formats-item">
                 <article class="format-card">
+                  <img
+                    class="format-image"
+                    src="./images/horse.jpg"
+                    alt="Horseshoe"
+                  />
                   <h3 class="format-title" lang="en">Horseshoe</h3>
                   <div class="formats-text">
                     <p>Площа: до 25 м2</p>
@@ -168,6 +178,11 @@
               </li>
               <li class="formats-item">
                 <article class="format-card">
+                  <img
+                    class="format-image"
+                    src="./images/handle.jpg"
+                    alt="Handlebar"
+                  />
                   <h3 class="format-title" lang="en">Handlebar</h3>
                   <div class="formats-text">
                     <p>Площа: до 15 м2</p>
