--- a/index.html
+++ b/index.html
@@ -32,9 +32,17 @@
               <li><a class="link" href="#contacts-sections">Контакти</a></li>
             </ul>
           </nav>
-          <button class="button modal-btn-open" type="button">
+          <button class="header__button button modal-btn-open" type="button">
             Замовити дзвінок
           </button>
+          <button class="header__burger menu-btn-open" type="button">
+            <svg width="24" height="24">
+              <use href="./images/icons.svg#icon-menu"></use>
+            </svg>
+          </button>
+          <div class="mobile-menu">
+            <button class="menu-btn-close" type="button">Close</button>
+          </div>
         </div>
       </div>
     </header>
@@ -46,7 +54,7 @@
           </h1>
         </div>
       </section>
-      <section class="advantages-section">
+      <!-- <section class="advantages-section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="advantages-section__list">
@@ -59,8 +67,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="section traditions-sections" id="traditions-sections">
+      </section> -->
+      <!-- <section class="section traditions-sections" id="traditions-sections">
         <div class="container">
           <div class="traditions-sections__container">
             <div class="traditions-sections__content">
@@ -91,8 +99,8 @@
             />
           </div>
         </div>
-      </section>
-      <section class="chefs-section section" id="chefs-sections">
+      </section> -->
+      <!-- <section class="chefs-section section" id="chefs-sections">
         <div class="container">
           <h2
             class="chefs-section__title section__title section__title--centered"
@@ -146,8 +154,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="formats-section section" id="formats-sections">
+      </section> -->
+      <!-- <section class="formats-section section" id="formats-sections">
         <div class="container">
           <h2 class="section__title section__title--centered">Формати</h2>
           <div class="formats-section__container">
@@ -216,8 +224,8 @@
             </button>
           </div>
         </div>
-      </section>
-      <section class="contacts-section section" id="contacts-sections">
+      </section> -->
+      <!-- <section class="contacts-section section" id="contacts-sections">
         <div class="container">
           <div class="contacts-section__container">
             <div class="contacts-section__form">
@@ -285,9 +293,9 @@
             ></iframe>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer-container">
           <nav class="footer-nav">
@@ -350,7 +358,7 @@
           </address>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <div class="backdrop is-hidden">
       <div class="modal">
