--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
             </svg>
           </button>
           <div class="mobile-menu">
-            <button class="menu-btn-close" type="button">Close</button>
+            <button class="mobile-menu__btn-close menu-btn-close" type="button">
+              Close
+            </button>
           </div>
         </div>
       </div>
@@ -52,9 +54,15 @@
           <h1 class="hero-section__title">
             <span class="text-brand">Сучасна</span> пекарня
           </h1>
+          <button
+            class="hero-section__button button modal-btn-open"
+            type="button"
+          >
+            Замовити дзвінок
+          </button>
         </div>
       </section>
-      <!-- <section class="advantages-section">
+      <section class="advantages-section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="advantages-section__list">
@@ -67,8 +75,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="section traditions-sections" id="traditions-sections">
+      </section>
+      <section class="section traditions-sections" id="traditions-sections">
         <div class="container">
           <div class="traditions-sections__container">
             <div class="traditions-sections__content">
@@ -94,12 +102,14 @@
               </p>
             </div>
             <img
+              class="traditions-sections__image"
+              srcset="./images/baker-man.jpg 1x, ./images/baker-man@2x.jpg 2x"
               src="./images/baker-man.jpg"
               alt="Чоловік пекар дивиться на батони із посмішкою"
             />
           </div>
         </div>
-      </section> -->
+      </section>
       <!-- <section class="chefs-section section" id="chefs-sections">
         <div class="container">
           <h2
@@ -418,5 +428,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
