--- a/index.html
+++ b/index.html
@@ -371,16 +371,16 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
-        <div class="footer-container">
-          <nav class="footer-nav">
-            <div class="footer-logo">
+        <div class="footer__container">
+          <nav class="footer__nav">
+            <div class="footer__logo">
               <a href="#">
                 <img src="./images/logo.svg" alt="Логотип Сучасна пекарня" />
               </a>
             </div>
-            <ul class="footer-menu">
+            <ul class="footer__menu">
               <li>
                 <a class="link" href="#traditions-sections">Наші традиції</a>
               </li>
@@ -389,52 +389,54 @@
               <li><a class="link" href="#contacts-sections">Контакти</a></li>
             </ul>
           </nav>
-          <address class="footer-address">
-            <div class="footer-contacts">
-              <ul class="address-list">
+          <address class="footer__address">
+            <div class="footer__contacts">
+              <ul class="footer__address-list">
                 <li>
-                  <a class="address-link" href="tel:+380960000007"
+                  <a class="footer__address-link" href="tel:+380960000007"
                     >+ 38 (096) 000 00 07</a
                   >
                 </li>
                 <li>
-                  <a class="address-link" href="mailto:shopbakery@gmail.com"
+                  <a
+                    class="footer__address-link"
+                    href="mailto:shopbakery@gmail.com"
                     >shopbakery@gmail.com</a
                   >
                 </li>
                 <li>
                   <a
-                    class="address-link"
+                    class="footer__address-link"
                     href="https://maps.app.goo.gl/qbiRqNUMTd2iYXiz9"
                     target="_blank"
                     >Україна, м. Київ, вул. Січових Стрільців 54</a
                   >
                 </li>
               </ul>
-              <div class="footer-socials">
+              <div class="footer__socials">
                 <a href="#">
-                  <svg class="address-icon" width="32" height="32">
+                  <svg class="footer__address-icon" width="32" height="32">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
 
                 <a href="#">
-                  <svg class="address-icon" width="32" height="32">
+                  <svg class="footer__address-icon" width="32" height="32">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </div>
             </div>
-            <div class="address-info">
-              <a class="address-link" href="#" target="_blank"
+            <div class="footer__address-info">
+              <a class="footer__address-link" href="#" target="_blank"
                 >Політика конфіденційності</a
               >
-              <p class="address-copyright">&copy; 2022 Дані захищені</p>
+              <p class="footer__address-copyright">&copy; 2022 Дані захищені</p>
             </div>
           </address>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <div class="backdrop is-hidden">
       <div class="modal">
